 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.AddPetActivity"
    tools:showIn="@layout/activity_add_pet"
    android:id="@+id/activity_add_pet_container">

    <ScrollView
        android:id="@+id/mainContentEditMode"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutImgEdit"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="false"
                android:gravity="center">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imgViewPetPicEdit"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/addpic_icon"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="2dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imgUpdPetPic"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/addpic_icon"
                    android:layout_centerHorizontal="true"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/nameContainerEdit"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/layoutImgEdit"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editTxtName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:hint="@string/namePetPlaceHolder"
                    android:textColorHint="#FF5E4D"
                    android:textSize="@dimen/fontSizeTitle"
                    android:maxLength="30"
                    android:gravity="center_vertical"/>
                <requestFocus/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameContainerEdit"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/animalTypeContainer"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/form_animalType"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontSizeGeneral"
                        android:layout_weight="0.40"/>

                    <Spinner
                        android:id="@+id/spinAnimalType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_weight="0.60"
                        android:prompt="@string/form_breed" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/breedContainerEdit"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/animalTypeContainer"
                    android:gravity="center_vertical"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/form_breed"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontSizeGeneral"
                        android:layout_weight="0.40"/>

                    <Spinner
                        android:id="@+id/spinBreed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_weight="0.60"
                        android:prompt="@string/form_breed" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ageContainerEdit"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/breedContainerEdit"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/form_age"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontSizeGeneral"
                        android:layout_weight="0.40"/>

                    <Spinner
                        android:id="@+id/spinAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:prompt="@string/form_age"
                        android:layout_weight="0.60" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/genderContainerEdit"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/ageContainerEdit"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/form_gender"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontSizeGeneral"
                        android:layout_weight="0.40" />

                    <Spinner
                        android:id="@+id/spinGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:prompt="@string/form_gender"
                        android:gravity="right"
                        android:layout_weight="0.60" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/chipContainerEdit"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/genderContainerEdit"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/form_chip"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontSizeGeneral"
                        android:layout_weight="0.40"/>

                    <EditText
                        android:id="@+id/editTxtChip"
                        android:singleLine="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:layout_weight=".60"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tatooContainerEdit"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/chipContainerEdit"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/form_tatoo"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontSizeGeneral"
                        android:layout_weight="0.40"/>

                    <EditText
                        android:id="@+id/editTxtTatoo"
                        android:singleLine="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:layout_weight=".60" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/colorContainerEdit"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/tatooContainerEdit"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colors"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontSizeGeneral"
                        android:layout_weight="0.40"/>

                    <EditText
                        android:id="@+id/editTxtColor"
                        android:singleLine="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/black"
                        android:layout_weight=".60" />

                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:layout_below="@+id/colorContainerEdit"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnSave">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/form_save"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="@dimen/fontSizeButton"/>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>