<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LostFragment">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/layoutLostNoCoFragmentLost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choosePetNoCo"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/layoutConnexionFragmentLost"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/connexion"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="@dimen/fontSizeButton" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/layoutLostNoPetFragmentLost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choosePetNoPet"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/layoutCreateAnimalFragmentLost"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btnCreateAnimal"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="@dimen/fontSizeButton" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layoutLostFragmentLost"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/petsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:background="#eee"
                android:padding="10dp"
                android:divider="@null"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
